--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,10 @@
 
 buildscript {
     ext {
+
+        googlePlayServicesVersion = "+" // default: "+"
+        firebaseMessagingVersion = "21.1.0" // default: "21.1.0"
+
         buildToolsVersion = "29.0.3"
         minSdkVersion = 21
         compileSdkVersion = 29
@@ -14,10 +18,13 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:4.1.0")
+        classpath 'com.google.gms:google-services:4.3.8'
+        // implementation 'com.google.firebase:firebase-analytics:17.3.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+
 
 allprojects {
     repositories {
@@ -36,3 +43,5 @@ allprojects {
         maven { url 'https://www.jitpack.io' }
     }
 }
+
+apply plugin: 'com.google.gms.google-services'
