--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/push-notification-ios": "^1.8.0",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-push-notification": "^7.3.1"
